style: increase logo size by 10% and fix contact hero navbar overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 #header .logo img {
-  max-height: 53px;
+  max-height: 58px;
 }
 
 /*--------------------------------------------------------------
@@ -2008,7 +2008,7 @@ section {
   background: linear-gradient(rgba(55, 81, 126, 0.7), rgba(55, 81, 126, 0.7)), url("../img/contact-hero-bg.jpg") center center;
   background-size: cover;
   padding: 60px 0;
-  padding-top: 100px;
+  padding-top: 130px;
   color: #fff;
 }
 
